--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -265,5 +265,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	  </div>
 	</div>
 </form>
+
+#set($IDSITE = 2);
+#parse("templates/analytics.vm")
+
 </body>
 </html>
