--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -259,5 +259,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 		</div>
 	</div>
 </form>
+
+#set($IDSITE = 4);
+#parse("templates/analytics.vm")
+
 </body>
 </html>
