--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -109,6 +109,10 @@
 		background-color: #d04437;
 	}
 	
+	.summary td{
+        white-space: nowrap;
+	}
+	
 </style>
 </head>
 <body>
@@ -247,7 +251,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 					</td>
 				</tr>
 				-->
-		  		<tr>
+		  		<tr class="summary">
 		  			<td rowspan="2" style="width: 40%">
 					  	<input type="text" id="date" name="date" style="display: none" onchange="this.form.datesubmit.click()" />
 						<input type="submit" id="datesubmit" name="datesubmit" class="spaced" style="display: none"/>
@@ -278,50 +282,50 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 							</script>
 						#end
 						</div>
-					</td>
-					<td align="right"  style="width: 20%">
+					</td>					
+					<td align="right" style="padding-right: 10px">
 						$i18n.getText("plugin.summary")
 					</td>
-					<td align="right" style="width: 5%">
+					<td align="right">
 						 $i18n.getText("plugin.day")
 					</td>
-					<td align="left" style="width: 80px;">
+					<td align="left">
 						 ($daySummary)
 					</td>
-					<td align="right" style="width: 5%">
+					<td align="right">
 						$i18n.getText("plugin.week")
 					</td>
-					<td align="left" style="width: 85px;">
+					<td align="left">
 						($weekSummary)
 					</td>
-					<td align="right" style="width: 5%">
+					<td align="right">
 						$i18n.getText("plugin.month")
 					</td>
-					<td align="left" style="width: 85px;">
+					<td align="left">
 						 ($monthSummary)
-					</td>
+					</td>					
 				</tr>
-				<tr>
-					<td align="right" style="width: 15%" >
+				<tr class="summary">				
+					<td align="right" style="padding-right: 10px">
 						#if($issuesRegex.size() != 0)
 									$i18n.getText("plugin.real.work") $i18n.getText("plugin.summary")
 								</td>
-								<td align="right" style="width: 5%">
+								<td align="right">
 									$i18n.getText("plugin.day")
 								</td>
-								<td align="left" style="width: 80px;">
+								<td align="left">
 									($dayFilteredSummary)
 								</td>
-								<td align="right" style="width: 5%">
+								<td align="right">
 									$i18n.getText("plugin.week")
 								</td>
-								<td align="left" style="width: 85px;">
+								<td align="left">
 									($weekFilteredSummary)
 								</td>
-								<td align="right" style="width: 5%">
+								<td align="right">
 									$i18n.getText("plugin.month")
 								</td>
-								<td align="left" style="width: 85px;">
+								<td align="left">
 									($monthFilteredSummary)
 						#end
 					</td>
