Refactored and extended sendFeedBack
Add jttp_build.porperties.
Refactore the method. (anonymus mail send, optional mail address).
Check mail server and set default from mail.
Feedback dialog check empty comment and mail server too.

--- a/src/main/resources/css/jttp_feedback.css
+++ b/src/main/resources/css/jttp_feedback.css
@@ -65,3 +65,12 @@
     top:2px;
     left:2px;
 }
+
+.error_message{
+	color: white;
+	text-align: center;
+	border: 1px solid;
+	border-color: #d04437;
+	border-radius: 3px;
+	background-color: #d04437;
+}
