--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -258,8 +258,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	</div>
 </form>
 
-#set($IDSITE = 4);
-#parse("templates/analytics.vm")
-
+#if($analyticsCheck)
+	#set($IDSITE = 4);
+	#parse("templates/analytics.vm")
+#end
 </body>
 </html>
