Fixed properties. And remove error message when reload dialog.

--- a/src/main/resources/templates/jttp_admin_feedback.vm
+++ b/src/main/resources/templates/jttp_admin_feedback.vm
@@ -47,6 +47,7 @@
 // Shows the dialog when the "Show dialog" button is clicked
 AJS.$("#dialog-show-button").click(function() {
     AJS.dialog2("#jttp-feedback-dialog").show();
+    AJS.$("#feedbackError").hide();
 });
 // SEND FEEDBACK and hide the dialog
 AJS.$("#sendfeedback").click(function(e) {
