Radio button for analytics

--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -772,8 +772,9 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 	</script>	
 </form>
 
-#set($IDSITE = 1);
-#parse("templates/analytics.vm")
-
+#if($analyticsCheck)
+	#set($IDSITE = 1);
+	#parse("templates/analytics.vm")
+#end
 </body>
 </html>
