--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -266,8 +266,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	</div>
 </form>
 
-#set($IDSITE = 2);
-#parse("templates/analytics.vm")
-
+#if($analyticsCheck)
+	#set($IDSITE = 2);
+	#parse("templates/analytics.vm")
+#end
 </body>
 </html>
