Piwik parameters come from build properties.

--- a/src/main/resources/templates/analytics.vm
+++ b/src/main/resources/templates/analytics.vm
@@ -31,7 +31,7 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
   (function() {
-    var u=$piwikHost;
+    var u='$piwikHost';
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', $piwikSiteId]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
