--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -320,66 +320,71 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
         </div>    
     </div>
     <script>   
-         AJS.$('.table-endtime').click(function(){
-             var temp = new String(AJS.$(this).html());
-             AJS.$('#startTime').val(temp.trim());
-         });
-         AJS.$('.table-starttime').click(function(){
-             var temp = new String(AJS.$(this).html());
-             AJS.$('#endTime').val(temp.trim());
-         });
-         
-         AJS.$('.table-comment').click(function(){
-             var temp = AJS.$(this).find('#hiddenWorklogBody').val();
-            
-             var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
-             var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
-         
-              AJS.$("#comments").html(temp2);
-              AJS.$("#comments").val(temp3);
-         });
-         
-         AJS.$('.table-issue').click(function(){
-             AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
-             
-             var temp = new String(AJS.$(this).find('a').html());
-             AJS.$('#issueSelect-textarea').val(temp.trim());
-             AJS.$('#issueSelect-textarea').focus();
-             AJS.$('#Edit').focus();
-             AJS.$('#Submitbutton').focus();
-         });
-         
-         AJS.$('.copy').click(function(){
-            AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
-            
-             var temp = AJS.$(this).parent().parent().find('.table-issue').find('a').html();
-             AJS.$('#issueSelect-textarea').val(temp.trim());
-             
-             temp = AJS.$(this).parent().parent().find('#hiddenWorklogBody').val();
-             var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
-             var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
-             
-             AJS.$("#comments").html(temp2);
-             AJS.$("#comments").val(temp3);
-             
-             AJS.$('#issueSelect-textarea').focus();
-             AJS.$('#Submitbutton').focus();
-         });
-         
-         AJS.$('#issueSelect-textarea').keydown(function(e){
-             return handleEnterKey(e, '#comments');
-         });
-         
-         AJS.$('#comments').keydown(function(e){
-           if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey){
-             AJS.$('#Submitbutton, #Edit').click();
+
+		 
+		 AJS.$('.table-endtime').click(function(){
+		 	var temp = new String(AJS.$(this).html());
+		 	AJS.$('#startTime').val(temp.trim());
+		 });
+		 AJS.$('.table-starttime').click(function(){
+		 	var temp = new String(AJS.$(this).html());
+		 	AJS.$('#endTime').val(temp.trim());
+		 });
+		 
+		 AJS.$('.table-comment').click(function(){
+			 var temp = AJS.$(this).find('#hiddenWorklogBody').val();
+			
+			 var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
+			 var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
+	     
+	     	 AJS.$("#comments").html(temp2);
+	     	 AJS.$("#comments").val(temp3);
+		 });
+		 
+		 AJS.$('.table-issue').click(function(){
+		 	AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
+		 	
+		 	var temp = new String(AJS.$(this).find('a').html());
+		 	AJS.$('#issueSelect-textarea').val(temp.trim());
+		 	AJS.$('#issueSelect-textarea').focus();
+		 	AJS.$('#Edit').focus();
+		 	AJS.$('#Submitbutton').focus();
+		 });
+		 
+		 AJS.$('.copy').click(function(){
+		    AJS.$('#issueSelect-textarea').parent().find('.item-delete').click();
+		    
+		 	var temp = AJS.$(this).parent().parent().find('.table-issue').find('a').html();
+		 	AJS.$('#issueSelect-textarea').val(temp.trim());
+		 	
+		 	temp = AJS.$(this).parent().parent().find('#hiddenWorklogBody').val();
+		 	var temp2 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "&#013;");
+		 	var temp3 = temp.replace(/(\\r\\n|\\n|\\r)/gm, "\n");
+		 	
+		 	AJS.$("#comments").html(temp2);
+		 	AJS.$("#comments").val(temp3);
+		 	
+		 	AJS.$('#issueSelect-textarea').focus();
+		 	AJS.$('#Submitbutton').focus();
+		 });
+		 
+		 AJS.$('#issueSelect-textarea').keydown(function(e){
+		    var isEnter = e.keyCode == 10 || e.keyCode == 13;
+	        if (isEnter && e.ctrlKey) {
+	          AJS.$('#Submitbutton, #Edit').click();
+	        }
+	     });
+	     
+	     AJS.$('#comments').keydown(function(e){
+	       if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey){
+		     AJS.$('#Submitbutton, #Edit').click();
            }
-         });
-         
-         AJS.$('#jttpForm').submit(function () {
-            AJS.$('#Submitbutton').prop("disabled", true);
-            return true;
-         });
+	     });
+	     
+	     AJS.$('#jttpForm').submit(function () {
+	        AJS.$('#Submitbutton').prop("disabled", true);
+	        return true;
+	     });
               
     </script>    
 </form>
